 * Improved smooth streaming compatibility
 * Support SCTE-18 / EAS inside TS
 * Support for RTP Reception Hint Track In MP4 with H.264, GSM and Speex payloads.
 * Support for XiphQt(MP4) vorbis and Flac

Stream filter:
 * Added ARIB STD-B25 TS streams decoder
 * Added stream prebuffering plugin
 * Removed HTTP Live streaming stream filter
 * Added zlib (a.k.a. deflate) decompression filter

Audio output:
 * Complete rewrite of the AudioTrack Android module. This is now the default.
   It now supports HDMI/SPDIF passthrough for AC3, 5.1/7.1 and float output.
 * Added Tizen audio module.
 * HDMI/SPDIF pass-through support for WASAPI

Audio filters and output:
 * Add SoX Resampler library audio filter module (converter and resampler)
 * a52tospdif and dtstospdif audio converters are merged into tospdif

Video ouput:
 * Linux/BSD default video output is now OpenGL, instead of Xvideo
 * Wayland shell surface window provider
 * Wayland shared memory video output
 * Large rework of the Android video outputs: there is now Surface (2.1, 2.2)
   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes,
   supporting subpicture blending and hardware acceleration
 * EFL Evas video output with Tizen TBM Surface support
 * New OpenGL provider for Windows

Text renderer:
 * CTL support through Harfbuzz in the Freetype module

Video filter:
 * Hardware deinterlacing on the rPI, using MMAL
 * New video filter to convert between fps rates
 * Added 9-bit and 10-bit support to image adjust filter
 * New edge detection filter uses the Sobel operator to detect edges

Stream Output:
 * Chromecast output module
 * RGB24 and YCbCr 4:2:0 RTP packetization

Encoder:
 * Support for Daala video in 4:2:0 and 4:4:4
 * VP8 and VP9 encoder using libvpx

Muxers: